--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "formik": "^2.2.9",
     "framer-motion": "^9.0.1",
     "react": "^18.2.0",
+    "react-date-object": "^2.1.5",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
